--- a/src/pages/content/content.css
+++ b/src/pages/content/content.css
@@ -95,124 +95,198 @@
 }
 
 .service2 {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 29px;
-    letter-spacing: 0.2em;
-    color: #00bdbd;
-    margin-top: 40px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  letter-spacing: 0.2em;
+  color: #00bdbd;
+  margin-top: 40px;
+}
+
+.content3 {
+  margin-top: 60px;
+  margin-left: 15px;
+}
+
+.worksText {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  letter-spacing: 0.2em;
+  color: #9f0100;
+}
+
+.hoverText {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 443px;
+  margin-top: -391px;
+  text-align: left;
+  padding-left: 20px;
+}
+
+.carousel-item:hover img {
+  opacity: 0.4;
+  background: linear-gradient(
+    360deg,
+    rgba(20, 18, 4, 0.7) 0%,
+    rgba(0, 0, 0, 0.7) 100%
+  );
+}
+
+.carousel-item:hover .hoverText {
+  opacity: 1;
+  background: linear-gradient(
+    360deg,
+    rgba(20, 18, 4, 0.7) 0%,
+    rgba(0, 0, 0, 0.7) 100%
+  );
+}
+
+.caption {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+  letter-spacing: 0.2em;
+  color: #ffffff;
+  margin-top: 54px;
+}
+
+.caption_description {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+  margin-top: 22px;
+}
+
+.content4 {
+  margin-top: 60px;
+  margin-left: 15px;
+}
+
+.phone_number {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.05em;
+  color: #333333;
+}
+
+.email_address {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.05em;
+  color: #333333;
+  margin-top: 30px;
+}
+
+.address {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.05em;
+  color: #333333;
+  margin-top: 30px;
+}
+
+@media (min-width: 990px) {
+  .content1 {
+    display: flex;
+    flex-direction: row;
   }
 
-  .content3 {
-    margin-top: 60px;
-    margin-left: 15px;
+  .aboutText {
+    margin-left: 10%;
+    white-space: nowrap;
   }
 
-  .worksText {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 29px;
-    letter-spacing: 0.2em;
-    color: #9f0100;
+  .aboutImage {
+    order: 2;
+    margin-left: 135px;
+    width: 540px;
+    height: 543px;
   }
 
-  .hoverText {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    width: 100%;
-    height: 443px;
-    margin-top: -391px;
-    text-align: left;
-    padding-left: 20px;
+  .aboutText2 {
+    margin-top: 135px;
+    white-space: nowrap;
+    margin-left: -28%;
   }
+
+  .aboutText3 {
+    margin-top: 200px;
+    margin-left: -14%;
+    width: 30%;
+  }
+
+  .content1 .bottom_border_line {
+    border-left: 1px solid #e0e0e0;
+    border-bottom: none;
+    margin-top: 45px;
+    margin-left: -10%;
+  }
+
+  .bottom_border_line {
+    width: 30%;
+    margin-left: 10%;
+  }
+
+  .servicesText {
+    margin-left: 10%;
+  }
+
+  .servicesImage {
+    width: 350px;
+    height: 203px;
+  }
+
+  .content_service{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .content_service1{
+    margin-left: 10%;
+    margin-top: -1%;
+    margin-right: -10%;
+  }
+
+  .servicesText3{
+    width: 68%;
+    
+  }
+
+  .worksText{
+    margin-left: 10%;
+  }
+
+.carousel-item{
+  margin-left: 10%;
+    width: 540px!important;
+height: 540px;
   
-  .carousel-item:hover img {
-    opacity: 0.4;
-    background: linear-gradient(360deg, rgba(20, 18, 4, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%)
-  }
-  
-  .carousel-item:hover .hoverText {
-    opacity: 1;
-    background: linear-gradient(360deg, rgba(20, 18, 4, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%)
-  }
-  
-  .caption{
-    font-style: normal;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 29px;
-    letter-spacing: 0.2em;
-    color: #FFFFFF;
-    margin-top:54px;
+}
+
+  .w-100{
+    width: 540px!important;
+height: 540px;
   }
 
-  .caption_description{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 26px;
-    letter-spacing: 0.05em;
-    color: #FFFFFF;
-   margin-top: 22px;
+  .contact_details{
+    margin-left: 10%;
   }
 
-  .content4 {
-    margin-top: 60px;
-    margin-left: 15px;
-  }
 
-  .phone_number{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 26px;
-    letter-spacing: 0.05em;
-    color: #333333;
-  }
-
-  .email_address{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 26px;
-    letter-spacing: 0.05em;
-    color: #333333;
-    margin-top: 30px;
-  }
-
-  .address{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 26px;
-    letter-spacing: 0.05em;
-    color: #333333;
-    margin-top: 30px;
-  }
-
-  footer{
-      display: flex;
-      justify-content: center;
-      margin-top: 60px;
-  }
-
-  i{
-      margin-right: 40px;
-      font-size: 24px;
-      color:#828282;
-  }
-
-  .fa-twitter{
-    color: transparent;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #828282;;
-  }
-
-  .fa-linkedin-in{
-    color: transparent;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #828282;;
-  }
+}
