--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -4,7 +4,8 @@
 
 .mobilebanner {
   background-image: url("..//../assets/images/mobilebanner.png");
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat; 
+  background-size: cover;
   object-fit: cover;
   width: 100%;
   height: 447.47px;
@@ -42,4 +43,10 @@ line-height: 26px;
 letter-spacing: 0.05em;
 color: #FFFFFF;
 text-align: center;
+}
+
+@media (min-width: 990px){
+  .mobilebanner{
+    height: 900px;
+  }
 }
