--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,6 +13,16 @@
     line-height: 19px;
     color: #333333;
 }
+
+a:not([href]):not([class]):hover {
+     color:#FFFFFF
+ 
+}
+
+a:not([href]):not([class]) {
+    color:#FFFFFF
+
+}
 @media (min-width:990px)
 {
    
@@ -22,3 +32,35 @@
     
 }
 
+
+/* ---------- */
+.nav{
+    margin-top: -70%;
+}
+  
+  .nav {
+    float: right;
+    list-style: none;    /*gets rid of bullet points*/ 
+      
+      /*padding: 0px -10px 0px -10px; */
+   
+  }
+  .nav > li {                                                             /*max-width: 768px*/
+      display:Inline-block;
+      padding: 10px 9px 10px 9px;                               /*nav bar text*/
+  }
+  
+   .nav > li a {                                               
+       text-decoration: none;
+       font-style: normal;
+       font-weight: normal;
+       font-size: 16px;
+       line-height: 26px;
+       letter-spacing: 0.05em;
+       color: #FFFFFF;
+       padding: 5px 0px 5px 0px
+   }
+  
+   .nav > li > a:hover {
+    border-bottom: 1px solid #FFFFFF;
+   }
