--- a/src/pages/content/content.css
+++ b/src/pages/content/content.css
@@ -200,21 +200,30 @@
   color: #333333;
   margin-top: 30px;
 }
+@media(max-width: 990px){
+  .content11{
+display: none;
+  }
+}
 
 @media (min-width: 990px) {
-  .content1 {
+  
+
+  /* .content1{
     display: flex;
     flex-direction: row;
-  }
-
-  .aboutText {
-    margin-left: 10%;
+    margin-top: 100px;
+  } */
+ 
+  /* .aboutText {
+    margin-left: 10vw;
     white-space: nowrap;
   }
 
+
   .aboutImage {
-    order: 2;
-    margin-left: 135px;
+     order: 2; 
+    margin-left: 8vw;
     width: 540px;
     height: 543px;
   }
@@ -222,21 +231,22 @@
   .aboutText2 {
     margin-top: 135px;
     white-space: nowrap;
-    margin-left: -28%;
+    margin-left: -28vw;
   }
 
   .aboutText3 {
     margin-top: 200px;
-    margin-left: -14%;
+    margin-left: -13.8vw;
     width: 30%;
-  }
+  } */
 
   .content1 .bottom_border_line {
     border-left: 1px solid #e0e0e0;
     border-bottom: none;
     margin-top: 45px;
-    margin-left: -10%;
+    margin-left: -10vw;
   }
+
 
   .bottom_border_line {
     width: 30%;
@@ -288,5 +298,53 @@ height: 540px;
     margin-left: 10%;
   }
 
+/* ///////// */
+.content1 {
+  display: none;
+} 
+
+.content11{
+  display: flex;
+  flex-direction: row;
+  margin-top: 100px;
+} 
+
+.aboutText {
+  margin-left: 10vw;
+  white-space: nowrap;
+}
+
+.aboutImage {
+  order: 2; 
+ margin-left: 8vw;
+ width: 540px;
+ height: 543px;
+}
+
+.about_desktop{
+  margin-left: -8vw;
+  margin-top: 45px;
+  display: flex;
+  flex-direction: row;
+}
+
+.about_desktop .bottom_border_line {
+  border-left: 1px solid #e0e0e0;
+  border-bottom: none;
+  margin-top: 45px;
+  margin-left: -2vw;
+  height: 60vh;
+} 
+.about_desktop2{
+  margin-top: 100px;
+  margin-left: -3vw;
+}
+.aboutText2{
+  max-width: 255px;
+}
+
+.aboutText3{
+  max-width: 400px;
+}
 
 }
