--- a/src/pages/content/content.css
+++ b/src/pages/content/content.css
@@ -265,16 +265,20 @@ display: none;
   .content_service{
     display: flex;
     flex-direction: row;
+    padding-left: 10vw;
   }
 
-  .content_service1{
-    margin-left: 10%;
+ .content_service1{
     margin-top: -1%;
-    margin-right: -10%;
+    margin-right: 30px;
+  }
+  
+  .content_service3{
+    margin-left: 30px;
   }
 
   .servicesText3{
-    width: 68%;
+    max-width: 350px;
     
   }
 
@@ -305,13 +309,15 @@ height: 540px;
 
 .content11{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-top: 100px;
+  margin-left: 10vw;
 } 
 
 .aboutText {
-  margin-left: 10vw;
+  /* margin-left: 10vw; */
   white-space: nowrap;
+  height: 29px;
 }
 
 .aboutImage {
@@ -319,25 +325,29 @@ height: 540px;
  margin-left: 8vw;
  width: 540px;
  height: 543px;
+ margin-top: -90px;
 }
 
 .about_desktop{
-  margin-left: -8vw;
+
   margin-top: 45px;
   display: flex;
   flex-direction: row;
+  border-left: 1px solid #e0e0e0;
+  padding-left: 45px;
+  
 }
 
 .about_desktop .bottom_border_line {
   border-left: 1px solid #e0e0e0;
   border-bottom: none;
   margin-top: 45px;
-  margin-left: -2vw;
+  /* margin-left: -2vw; */
   height: 60vh;
 } 
 .about_desktop2{
   margin-top: 100px;
-  margin-left: -3vw;
+  /* margin-left: -3vw; */
 }
 .aboutText2{
   max-width: 255px;
