--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,7 +6,7 @@
     width: 100%;
 }
 
-.navbar-light .navbar-nav .nav-link {
+ .navbar-nav {
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -14,21 +14,72 @@
     color: #333333;
 }
 
-a:not([href]):not([class]):hover {
-     color:#FFFFFF
- 
+.nav-link{
+    color: currentColor;
 }
 
-a:not([href]):not([class]) {
-    color:#FFFFFF
 
+
+@media(max-width:990px){
+    /* .active{
+        border: none;
+        color: #333333;
+    }
+*/
+    a:not([href]):not([class]):hover {
+        color:#333333;
+    
+   }
+   
+   a:not([href]):not([class]) {
+       color:#333333;
+   
+   }
+
+   .nav-link{
+       margin-bottom: 40px;
+   }
+
+
+.show{
+    background-color: #FFFFFF;
+    height: -webkit-fill-available;
+    margin-top: -10px;
+    margin-left: -96.5%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 26px;
+    align-items: center;
+}
+
+.hamburger_button{
+    margin-left: 45vw;
+}
 }
 @media (min-width:990px)
 {
+    .exmarksspot{
+        margin-left: 10vw!important;
+    }
+
+    .overlay_hamburger_mobile{
+        display: none;
+    }
    
     .navbar-expand-lg{
         display: none;
     }
+
+    a:not([href]):not([class]):hover {
+        color:#FFFFFF
+    
+   }
+   
+   a:not([href]):not([class]) {
+       color:#FFFFFF
+   
+   }
     
 }
 
@@ -62,4 +113,11 @@ align-items: center;
   
    .nav > li > a:hover {
     border-bottom: 1px solid #FFFFFF;
+   }
+
+   .copen_logo{
+       height: 26px;
+    position: fixed;
+       margin-left: -30vw;
+       margin-top: -10px;
    }
