--- a/src/pages/content/content.css
+++ b/src/pages/content/content.css
@@ -109,6 +109,11 @@
   margin-left: 15px;
 }
 
+.content33 {
+  margin-top: 60px;
+  margin-left: 15px;
+}
+
 .worksText {
   font-style: normal;
   font-weight: normal;
@@ -200,53 +205,28 @@
   color: #333333;
   margin-top: 30px;
 }
-@media(max-width: 990px){
-  .content11{
-display: none;
+
+.image_slider {
+  margin-left: 10vw;
+}
+
+@media (max-width: 990px) {
+  .content11 {
+    display: none;
+  }
+
+  .content33 {
+    display: none;
   }
 }
 
 @media (min-width: 990px) {
-  
-
-  /* .content1{
-    display: flex;
-    flex-direction: row;
-    margin-top: 100px;
-  } */
- 
-  /* .aboutText {
-    margin-left: 10vw;
-    white-space: nowrap;
-  }
-
-
-  .aboutImage {
-     order: 2; 
-    margin-left: 8vw;
-    width: 540px;
-    height: 543px;
-  }
-
-  .aboutText2 {
-    margin-top: 135px;
-    white-space: nowrap;
-    margin-left: -28vw;
-  }
-
-  .aboutText3 {
-    margin-top: 200px;
-    margin-left: -13.8vw;
-    width: 30%;
-  } */
-
   .content1 .bottom_border_line {
     border-left: 1px solid #e0e0e0;
     border-bottom: none;
     margin-top: 45px;
     margin-left: -10vw;
   }
-
 
   .bottom_border_line {
     width: 30%;
@@ -262,99 +242,145 @@ display: none;
     height: 203px;
   }
 
-  .content_service{
+  .content_service {
     display: flex;
     flex-direction: row;
     padding-left: 10vw;
   }
 
- .content_service1{
+  .content_service1 {
     margin-top: -1%;
     margin-right: 30px;
   }
-  
-  .content_service3{
+
+  .content_service3 {
     margin-left: 30px;
   }
 
-  .servicesText3{
+  .servicesText3 {
     max-width: 350px;
-    
   }
 
-  .worksText{
+  .worksText {
     margin-left: 10%;
   }
 
-.carousel-item{
-  margin-left: 10%;
-    width: 540px!important;
-height: 540px;
-  
-}
-
-  .w-100{
-    width: 540px!important;
-height: 540px;
+  .carousel-item {
+    margin-left: 10%;
+    width: 540px !important;
+    height: 540px;
   }
 
-  .contact_details{
+  .image_slider_image {
+    height: 540px;
+    margin-right: 30px;
+  }
+
+  .slick-next {
+    display: none !important;
+  }
+
+  .contact_details {
     margin-left: 10%;
   }
 
-/* ///////// */
-.content1 {
-  display: none;
-} 
+  .desktophoverText {
+    transition: 0.5s ease;
+    opacity: 0;
+    position: absolute;
+    width: 543.14px;
+    height: 540px;
+    margin-top: -540px;
+    text-align: left;
+    padding-left: 20px;
+  }
 
-.content11{
-  display: flex;
-  flex-direction: column;
-  margin-top: 100px;
-  margin-left: 10vw;
-} 
+  .slider_item:hover img {
+    opacity: 0.4;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      #c4c4c4;
+  }
 
-.aboutText {
-  /* margin-left: 10vw; */
-  white-space: nowrap;
-  height: 29px;
-}
+  .slider_item:hover .desktophoverText {
+    opacity: 1;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      #c4c4c4;
+  }
 
-.aboutImage {
-  order: 2; 
- margin-left: 8vw;
- width: 540px;
- height: 543px;
- margin-top: -90px;
-}
+  .caption {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    letter-spacing: 0.2em;
+    color: #ffffff;
+    margin-top: 280px;
+  }
 
-.about_desktop{
+  .caption_description {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 0.05em;
+    color: #ffffff;
+    margin-top: 22px;
+  }
 
-  margin-top: 45px;
-  display: flex;
-  flex-direction: row;
-  border-left: 1px solid #e0e0e0;
-  padding-left: 45px;
-  
-}
+  /* ///////// */
+  .content1 {
+    display: none;
+  }
 
-.about_desktop .bottom_border_line {
-  border-left: 1px solid #e0e0e0;
-  border-bottom: none;
-  margin-top: 45px;
-  /* margin-left: -2vw; */
-  height: 60vh;
-} 
-.about_desktop2{
-  margin-top: 100px;
-  /* margin-left: -3vw; */
-}
-.aboutText2{
-  max-width: 255px;
-}
+  .content3 {
+    display: none;
+  }
 
-.aboutText3{
-  max-width: 400px;
-}
+  .content11 {
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    margin-left: 10vw;
+  }
 
+  .aboutText {
+    /* margin-left: 10vw; */
+    white-space: nowrap;
+    height: 29px;
+  }
+
+  .aboutImage {
+    order: 2;
+    margin-left: 8vw;
+    width: 540px;
+    height: 543px;
+    margin-top: -90px;
+  }
+
+  .about_desktop {
+    margin-top: 45px;
+    display: flex;
+    flex-direction: row;
+    border-left: 1px solid #e0e0e0;
+    padding-left: 45px;
+  }
+
+  .about_desktop .bottom_border_line {
+    border-left: 1px solid #e0e0e0;
+    border-bottom: none;
+    margin-top: 45px;
+    /* margin-left: -2vw; */
+    height: 60vh;
+  }
+  .about_desktop2 {
+    margin-top: 100px;
+    /* margin-left: -3vw; */
+  }
+  .aboutText2 {
+    max-width: 255px;
+  }
+
+  .aboutText3 {
+    max-width: 400px;
+  }
 }
