--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -2,6 +2,10 @@
   font-family: Lato;
 }
 
+body {
+  font-family: Lato;
+}
+
 .mobilebanner {
    background-image: url("..//../assets/images/desktopbanner.png"); 
 
@@ -47,11 +51,10 @@ text-align: center;
 }
 
 @media (min-width: 2100px){
-  .home{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center
+  .body_content{
+    width: 50%;
+    margin: 0 auto;
+    max-width: 1200px;
   }
 }
 
